# IZTECH-ceng-391-image-understanding

ceng391_hw01_code/libceng391/: CMakeLists.txt
ceng391_hw01_code/libceng391/app/: CMakeLists.txt  image_test.cpp
ceng391_hw01_code/libceng391/include/ceng391/: image.hpp
ceng391_hw01_code/libceng391/src/: CMakeLists.txt  image.cpp
ceng391_hw02_code/libceng391/: CMakeLists.txt
ceng391_hw02_code/libceng391/app/: CMakeLists.txt  image_box_filter.cpp  image_test.cpp
ceng391_hw02_code/libceng391/include/ceng391/: image.hpp
ceng391_hw02_code/libceng391/src/: CMakeLists.txt  image.cpp
